# shell_challenge

./: .env  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  convertor.py  docker-compose.yaml  main.py  pyproject.toml  test_main.py
