[tool.poetry]
name = "shell-challenge"
version = "0.1.0"
description = ""
authors = ["Karim Moradi <kmoradi.ai@gmail.com>"]
readme = "README.md"
#packages = [{include = "shell_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = "^0.21.0"
requests = "^2.28.2"
httpx = "^0.23.3"
geopy = "^2.3.0"
#pycountry = "^22.3.5"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pytz = "^2022.7.1"
pre-commit = "^3.1.1"
pylint = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
